--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? 2012, PHP 5.4.1 RC1
+22 Mar 2012, PHP 5.4.1 RC1
 
 - CLI Server:
   . Fixed bug #61461 (missing checks around malloc() calls). (Ilia)
