Fixed bug #61761 ('Overriding' a private static method with a different signature causes crash)

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,10 @@ PHP                                                                        NEWS
     $_SERVER['SCRIPT_FILENAME'] when using router). (Laruence)
   . "Connection: close" instead of "Connection: closed" (Gustavo)
 
+- Core:
+  . Fixed bug #61761 ('Overriding' a private static method with a different 
+    signature causes crash). (Laruence)
+
 - JSON
   . Fixed bug #61537 (json_encode() incorrectly truncates/discards
     information). (Adam)
@@ -17,7 +21,8 @@ PHP                                                                        NEWS
 (merge after 5.3.11 release)
 
 - Core:
-  . Fixed bug #61728 (PHP crash when calling ob_start in request_shutdown phase). (Laruence)
+  . Fixed bug #61728 (PHP crash when calling ob_start in request_shutdown 
+    phase). (Laruence)
   . Fixed bug #61660 (bin2hex(hex2bin($data)) != $data). (Nikita Popov)
   . Fixed bug #61650 (ini parser crashes when using ${xxxx} ini variables
     (without apache2)). (Laruence)
