--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ PHP                                                                        NEWS
   . Fixed bug #61713 (Logic error in charset detection for htmlentities).
     (Anatoliy)
   . Fixed bug #61991 (long overflow in realpath_cache_get()). (Anatoliy)
+  . Changed php://fd to be available only for CLI.
 
 - Fileinfo:
   . Fixed bug #61812 (Uninitialised value used in libmagic). 
@@ -34,6 +35,9 @@ PHP                                                                        NEWS
 - PDO:
   . Fixed bug #61755 (A parsing bug in the prepared statements can lead to
     access violations). (Johannes)
+
+- Phar:
+  . Fix bug #61065 (Secunia SA44335). (Rasmus)
 
 - Iconv extension:
   . Fixed a bug that iconv extension fails to link to the correct library
