--- a/NEWS
+++ b/NEWS
@@ -57,6 +57,9 @@ PHP                                                                        NEWS
   . Fixed bug #61617 (Libxml tests failed(ht is already destroyed)).
     (Laruence)
     
+- Sockets:
+  . Fixed bug #62025 (__ss_family was changed on AIX 5.3). (Felipe)
+    
 - XML Writer:
   . Fixed bug #62064 (memory leak in the XML Writer module). 
     (jean-pierre dot lozi at lip6 dot fr)
