- Fixed bug #61295 (php-fpm should not fail with commented 'user' for non-root start)

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ PHP                                                                        NEWS
 - FPM
   . Fixed bug #61045 (fpm don't send error log to fastcgi clients). (fat)
 	. Fixed bug #61835 (php-fpm is not allowed to run as root). (fat)
+  . Fixed bug #61295 (php-fpm should not fail with commented 'user'
+    for non-root start). (fat)
 
 - XML Writer:
   . Fixed bug #62064 (memory leak in the XML Writer module). 
