--- a/NEWS
+++ b/NEWS
@@ -6,10 +6,18 @@ PHP                                                                        NEWS
 
 - FPM
   . Fixed bug #61045 (fpm don't send error log to fastcgi clients). (fat)
-	. Fixed bug #61835 (php-fpm is not allowed to run as root). (fat)
+  . Fixed bug #61835 (php-fpm is not allowed to run as root). (fat)
   . Fixed bug #61295 (php-fpm should not fail with commented 'user'
     for non-root start). (fat)
   . Fixed bug #61026 (FPM pools can listen on the same address). (fat)
+
+- Intl
+  . Fixed bug #62082 (grapheme_extract() memory leaks). (Gustavo)
+  . Fixed bug #62082 (Memory corruption in internal get_icu_disp_value_src_php
+    function). (Gustavo)
+  . Fixed bug #62081 (IntlDateFormatter constructor leaks memory when called
+    twice). (Gustavo)
+  . Fixed bug #62070 (Collator::getSortKey() returns garbage). (Gustavo)
 
 - XML Writer:
   . Fixed bug #62064 (memory leak in the XML Writer module). 
