--- a/NEWS
+++ b/NEWS
@@ -13,13 +13,14 @@ PHP                                                                        NEWS
 
 - Intl
   . Fixed bug #62083 (grapheme_extract() memory leaks). (Gustavo)
-  . Fixed bug #62082 (Memory corruption in internal get_icu_disp_value_src_php
+  . Fixed bug #62082 (memory corruption in internal get_icu_disp_value_src_php
     function). (Gustavo)
   . Fixed bug #62081 (IntlDateFormatter constructor leaks memory when called
     twice). (Gustavo)
   . Fixed bug #62070 (Collator::getSortKey() returns garbage). (Gustavo)
   . Fixed bug #62017 (datefmt_create with incorrectly encoded timezone leaks
     pattern). (Gustavo)
+  . Fixed bug #60785 (memory leak in IntlDateFormatter constructor). (Gustavo)
 
 - XML Writer:
   . Fixed bug #62064 (memory leak in the XML Writer module). 
