--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2012, PHP 5.4.4
 
+- COM:
+  . Fixed bug #62146 com_dotnet cannot be built shared. (Johannes)
+
 - CLI Server:
   . Implemented FR #61977 (Need CLI web-server support for files with .htm & 
     svg extensions). (Sixd, Laruence)
